--- a/views/call/create.ejs
+++ b/views/call/create.ejs
@@ -65,6 +65,14 @@
 
 
 <script>
+
+$("#call-form").submit(function() {
+    $(document).ready(function() {
+      $('#loadingModal').modal('show');
+    })
+  });
+
+
   $("#departament").on("change", function() {
     var valor = $(this).val(); // aqui vc pega cada valor selecionado com o this
     if (valor == "ti") {
@@ -190,7 +198,25 @@
   });
 </script>
 
-
+<!-- Modal -->
+<div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Aguarde...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <%- include('../partials/footer.ejs') %>
