--- a/views/call/dashboard.ejs
+++ b/views/call/dashboard.ejs
@@ -1,5 +1,13 @@
 <%- include('../partials/header.ejs') %>
 
+<% if(message.length > 0) { %>
+  <script>
+    $(document).ready(function() {
+      $('#message').modal('show');
+    });
+  </script>
+  <% } %>
+
   <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px; margin-bottom: -50px;"></a>
 
   <h3 class='display-4 mb-4 mt-5' style="text-align: center;">Meus Chamados</h3>
@@ -87,7 +95,25 @@
   </script>
 
 
-
+  <!-- Modal -->
+<div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= message %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
