--- a/views/call/create.ejs
+++ b/views/call/create.ejs
@@ -53,7 +53,7 @@
   <textarea class="form-control" name="subject" required style="min-height:40px !important;width:40% !important"></textarea>
   <label for="message" style="margin-top: 1%">Mensagem</label>
   <textarea class="form-control" name="message" required style="min-height:150px !important"></textarea>
-  <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple required style="margin-top: 1.5%;" />
+  <input type="file" name="files" size="50" accept="image/jpeg,image/png,image/jpg,application/pdf" multiple style="margin-top: 1.5%;" />
   <hr style="width: 90%;">
   <div style="display: block;">
     <input type="checkbox" id="subscribe" name="subscribe" style="margin-top: 1%;" checked>
