--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,158 +1,188 @@
 <%- include('../partials/header.ejs') %>
-  <a href="#"><img src="./images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px; margin-bottom: -50px;"></a>
-  <% if(message) { %>
-    <script>
-      $(document).ready(function () {
-        $('#message').modal('show');
+<a href="#"><img src="./images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px; margin-bottom: -50px;"></a>
+<% if(message) { %>
+<script>
+  $(document).ready(function() {
+    $('#message').modal('show');
+  });
+</script>
+<% } %>
+
+<h3 class='display-4 mb-4 mt-5' style="text-align: center;">Minhas Solicitações</h3>
+<div class="form-row justify-content-center">
+  <div class="form-group col-md-3">
+    <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
+      <img class="card-img-top" src="./images/pendent-folder-cuate.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">PENDENTES</h5>
+        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  -->
+        <a href="/dashboard/pending" class="btn btn-warning">Visualizar <span id="pending-badge" class="badge badge-light">
+            <%= pending %>
+          </span></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group col-md-3">
+    <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
+      <img class="card-img-top" src="./images/danied-cuate.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">REPROVADOS</h5>
+        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  -->
+        <a href="/dashboard/reproved" class="btn btn-danger">Visualizar <span id="reproved-badge" class="badge badge-light">
+            <%= reproved %>
+          </span></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group col-md-3">
+    <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
+      <img class="card-img-top" src="./images/aproved-rafiki.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">APROVADOS</h5>
+        <a href="/dashboard/aproved" class="btn btn-success">Visualizar <span id="approved-badge" class="badge badge-light">
+            <%= aproved %>
+          </span></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr width="75%">
+<h3 class="display-4" style="text-align: center; margin-top: 20px;">Últimas Solicitações</h3>
+<table id="myTable" class="table table-responsive-sm justify-content-center" style="margin-left: auto !important; margin-right: auto !important;">
+  <thead>
+    <tr style="background-color: #9e9e9e">
+      <th scope="col">#</th>
+      <th scope="col">Tipo</th>
+      <th scope="col">Solicitação</th>
+      <th scope="col">Data</th>
+      <th scope="col">Status</th>
+      <th scope="col">Detalhes</th>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table> 
+</div>
+</div>
+
+<script>
+  const eventSourceBadges = new EventSource('/dashboard/badges');
+
+  eventSourceBadges.onmessage = (event) => {
+    const badges = JSON.parse(event.data);
+    // Update the badge elements on the page with the received data
+    document.getElementById('pending-badge').textContent = badges.pending;
+    document.getElementById('reproved-badge').textContent = badges.reproved;
+    document.getElementById('approved-badge').textContent = badges.approved;
+  };
+
+  const eventSource = new EventSource('/dashboard/table');
+
+  eventSource.onmessage = (event) => {
+    const data = JSON.parse(event.data);
+    const payments = data.payments;
+    const purchases = data.purchases;
+
+    // Update the myTable element on the page with the received data
+    // You'll need to implement the logic to dynamically create table rows
+    // based on the payments and purchases data.
+    // Example:
+    const myTable = document.getElementById('myTable');
+    myTable.innerHTML = ''; // Clear existing table content
+    // Add the table header
+    const headerRow = myTable.insertRow();
+    headerRow.style.backgroundColor = '#9e9e9e'; // Add background color to headerRow
+    headerRow.style.fontWeight = 'bold'; // Add bold style to headerRow
+    headerRow.insertCell().textContent = '#';
+    headerRow.insertCell().textContent = 'Tipo';
+    headerRow.insertCell().textContent = 'Descrição';
+    headerRow.insertCell().textContent = 'Data';
+    headerRow.insertCell().textContent = 'Status';
+    headerRow.insertCell().textContent = 'Detalhes';
+
+    // Add payments to the table
+    payments.forEach(payment => {
+      const row = myTable.insertRow();
+      row.insertCell().textContent = payment.id;
+      row.insertCell().textContent = 'Pagamentos';
+      row.insertCell().textContent = payment.description;
+      row.insertCell().textContent = new Date(payment.createdAt).toLocaleDateString('pt-BR', {
+        day: '2-digit',
+        month: '2-digit',
+        year: 'numeric'
       });
-    </script>
-    <% } %>
+      row.insertCell().textContent = payment.status;
 
-      <h3 class='display-4 mb-4 mt-5' style="text-align: center;">Minhas Solicitações</h3>
-      <div class="form-row justify-content-center">
-        <div class="form-group col-md-3">
-          <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
-            <img class="card-img-top" src="./images/pendent-folder-cuate.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">PENDENTES</h5>
-              <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  -->
-              <a href="/dashboard/pending" class="btn btn-warning">Visualizar <span class="badge badge-light">
-                  <%= pending %>
-                </span></a>
-            </div>
-          </div>
-        </div>
+      // Create the anchor element and set its attributes
+      const detailsLink = document.createElement('a');
+      detailsLink.href = `/payments/${payment.id}`;
+      detailsLink.textContent = 'Detalhes';
 
-        <div class="form-group col-md-3">
-          <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
-            <img class="card-img-top" src="./images/danied-cuate.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">REPROVADOS</h5>
-              <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  -->
-              <a href="/dashboard/reproved" class="btn btn-danger">Visualizar <span class="badge badge-light">
-                  <%= reproved %>
-                </span></a>
-            </div>
-          </div>
-        </div>
+      // Append the anchor element to the cell
+      row.insertCell().appendChild(detailsLink);
 
-        <div class="form-group col-md-3">
-          <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
-            <img class="card-img-top" src="./images/aproved-rafiki.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">APROVADOS</h5>
-              <a href="/dashboard/aproved" class="btn btn-success">Visualizar <span class="badge badge-light">
-                  <%= aproved %>
-                </span></a>
-            </div>
-          </div>
-        </div>
+      // Add other payment details as needed
+    });
+
+    // Add purchases to the table
+    purchases.forEach(purchase => {
+      const row = myTable.insertRow();
+      row.insertCell().textContent = purchase.id;
+      row.insertCell().textContent = 'Compras';
+      row.insertCell().textContent = purchase.justification;
+      row.insertCell().textContent = new Date(purchase.createdAt).toLocaleDateString('pt-BR', {
+        day: '2-digit',
+        month: '2-digit',
+        year: 'numeric'
+      });
+      row.insertCell().textContent = purchase.status;
+
+      // Create the anchor element and set its attributes
+      const detailsLink = document.createElement('a');
+      detailsLink.href = `/purchases/${purchase.id}`;
+      detailsLink.textContent = 'Detalhes';
+
+      // Append the anchor element to the cell
+      row.insertCell().appendChild(detailsLink);
+
+      // Add other purchase details as needed
+    });
+
+  };
+</script>
+
+<script>
+  var table = new DataTable('#myTable', {
+    language: {
+      url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
+    },
+
+    order: [
+      [0, 'desc']
+    ] // Sort the first column (index 0) in descending order
+  });
+</script>
+
+<!-- Modal -->
+<div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-
-      <hr width="75%">
-      <h3 class="display-4" style="text-align: center; margin-top: 20px;">Últimas Solicitações</h3>
-      <table id="myTable" class="table table-responsive-sm justify-content-center" style="margin-left: auto !important; margin-right: auto !important;">
-        <thead>
-          <tr style="background-color: #9e9e9e">
-            <th scope="col">#</th>
-            <th scope="col">Tipo</th>
-            <th scope="col">Solicitação</th>
-            <th scope="col">Data</th>
-            <th scope="col">Status</th>
-            <th scope="col">Detalhes</th>
-          </tr>
-        </thead>
-        <tbody>
-
-          <% if(payments !=undefined){ payments.forEach(payment=> {
-            // Format the date using JavaScript
-            let formattedDate = new Date(payment.createdAt).toLocaleDateString('pt-BR', {
-            day: '2-digit',
-            month: '2-digit',
-            year: 'numeric'
-            }); %>
-
-            <tr style="background-color: #dcdcdc26">
-              <td scope="row">
-                <%= payment.id %>
-              </td>
-              <td>Pagamento</td>
-              <td>
-                <%= payment.description.substring(0, 30) %>
-              </td>
-              <td>
-                <%= formattedDate %>
-              </td>
-              <td>
-                <%= payment.status %>
-              </td>
-              <td><a href="/payments/<%= payment.id %>">Detalhes</a></td>
-            </tr>
-
-            <% }); } %>
-
-              <% if(purchases !=undefined){ purchases.forEach(purchase=> {
-                // Format the date using JavaScript
-                let formattedDate = new Date(purchase.createdAt).toLocaleDateString('pt-BR', {
-                day: '2-digit',
-                month: '2-digit',
-                year: 'numeric'
-                }); %>
-
-                <tr style="background-color: #dcdcdc81">
-                  <td scope="row">
-                    <%= purchase.id %>
-                  </td>
-                  <td>Compra</td>
-                  <td>
-                    <%= purchase.justification.substring(0, 30) %>
-                  </td>
-                  <td>
-                    <%= formattedDate %>
-                  </td>
-                  <td>
-                    <%= purchase.status %>
-                  </td>
-                  <td>
-                    <a href="/purchases/<%= purchase.id %>">Detalhes</a>
-                  </td>
-                </tr>
-
-                <% }); } %>
-
-        </tbody>
-      </table> 
+      <div class="modal-body">
+        <%= message %>
       </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
-
-      <script>
-        var table = new DataTable('#myTable', {
-          language: {
-            url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
-          },
-
-          order: [[0, 'desc']] // Sort the first column (index 0) in descending order
-        });
-
-      </script>
-
-      <!-- Modal -->
-      <div class="modal fade" id="message" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <%= message %>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <%- include('../partials/footer.ejs') %>
+    </div>
+  </div>
+</div>
+<%- include('../partials/footer.ejs') %>
