--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -155,7 +155,7 @@
 </script>
 
 <script>
-  var table = new DataTable('#myTable', {
+ /* var table = new DataTable('#myTable', {
     language: {
       url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
     },
@@ -163,7 +163,7 @@
     order: [
       [0, 'desc']
     ] // Sort the first column (index 0) in descending order
-  });
+  });*/
 </script>
 
 <!-- Modal -->
