--- a/views/call/dashboard.ejs
+++ b/views/call/dashboard.ejs
@@ -9,10 +9,7 @@
   <% } %>
 
   <a href="#"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px; margin-bottom: -50px;"></a>
-  
-
-
-   
+    
 <script>
    
   const eventSource = new EventSource('/call/sse'); // Update the SSE endpoint
@@ -82,7 +79,7 @@
       <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
         <img class="card-img-top" src="../images/danied-cuate.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">PENDENTES</h5>
+          <h5 class="card-title">AGUARDANDO ATENDIMENTO</h5>
           <a href="/call/pending" class="btn btn-danger">Visualizar <span class="badge badge-light" id="pendingBadge"><%= pending.length %></span></a>
         </div>
       </div>
@@ -129,14 +126,14 @@
   </table> 
 
   <script>
-    var table = new DataTable('#myTable', {
+  /*  var table = new DataTable('#myTable', {
       language: {
         url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json',
       },
 
       order: [[0, 'desc']] // Sort the first column (index 0) in descending order
     });
-
+*/
   </script>
 
 
