--- a/views/call/show.ejs
+++ b/views/call/show.ejs
@@ -160,6 +160,14 @@
                 <option value="Comunicação Direta">Comunicação Direta</option>
               </select>
               <%}%>
+     
+              <label for="status">Situação</label>
+              <select class="form-control" name="status">
+                <option value="" disabled="disabled" selected="selected">Selecione a situação</option>
+                <option value="AGUARDANDO RESPOSTA DO SOLICITANTE">AGUARDANDO RESPOSTA DO SOLICITANTE</option>
+                <option value="AGUARDANDO RESPOSTA DE TERCEIROS">AGUARDANDO RESPOSTA DE TERCEIROS</option>
+              </select>
+  
               <label for="checkbox">Finalizar chamado</label>
               <input type="checkbox" id="finishcall" name="finishcall" style="margin-top: 1%;"><br>
               <%}%>
