--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,6 +59,8 @@
             </a>
           </li>
         </div>
+        <!--
+        
         <li>
           <div class="dashimg"><a href="/dashboard" style="text-align: center;">Compras e Pagamentos</a></div>
         </li>
@@ -68,6 +70,9 @@
         <li>
           <div class="dashimg"><a href="/payments"><img src="../images/dolar.png">Pagamentos</a></div>
         </li>
+        
+        -->
+        
         <% if(user.permissions.user_registration==1){ %>
           <li>
             <div class="dashimg"><a href="/registrations_token"><img src="../images/useradd.png">Cadastro</a></div>
@@ -77,14 +82,19 @@
           </li>
           <% } %>
 
-            <% if(user.permissions.supplier_registration==1){ %>
-              <li>
-                <div class="dashimg"><a href=" /suppliers"><img src="../images/pacote.png">Fornecedores</a></div>
-              </li>
-              <li>
-                <div class="dashimg"><a href=" /suppliers_register"><img src="../images/addforn.png">Cadastrar Fornecedor</a></div>
-              </li>
-              <% } %>
+          <!--
+          
+          <% //if(user.permissions.supplier_registration==1){ %>
+            <li>
+              <div class="dashimg"><a href=" /suppliers"><img src="../images/pacote.png">Fornecedores</a></div>
+            </li>
+            <li>
+              <div class="dashimg"><a href=" /suppliers_register"><img src="../images/addforn.png">Cadastrar Fornecedor</a></div>
+            </li>
+            <% //} %>
+          
+          -->
+            
 
               <%if(user.permissions.create_call == 1 || user.permissions.create_category == 1){%>
                 <li>
