--- a/views/partials/header_show_call.ejs
+++ b/views/partials/header_show_call.ejs
@@ -52,7 +52,7 @@
       <ul class="list-unstyled components mb-5">
         <div id="userIcon">
           <li class="active">
-            <a href="/dashboard">
+            <a href="/call/dashboard">
               <img src="../../images/user.png">
               <br>
               <span>
