--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,7 +50,8 @@
       <ul class="list-unstyled components mb-5">
         <div id="userIcon">
           <li class="active">
-            <a href="/dashboard">
+            <!-- Rediciona para dashboard dos chamados -->
+            <a href="/call/dashboard">
               <img src="../images/user.png">
               <br>
               <span>
